--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.21"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.0-alpha3"
   }
 }
